add AppConfig for RestTemplate bean; update CreateQuizRequest to include userId; enhance QuizGenerationClient with service URL and dynamic quiz generation logic; implement adaptive difficulty calculation in QuizService